k8s/kube-prometheus-stack/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.home.coredev.uk`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
    - match: Host(`prometheus.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
          namespace: tinyauth
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
  tls:
    secretName: prometheus-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.coredev.uk`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-tls
